--- a/data/en/service.yml
+++ b/data/en/service.yml
@@ -1,48 +1,18 @@
 ########################### services ############################
 services:
   # service item loop
-  - title : "Web development"
+  - title : "Concepts + Patterns"
+    icon : "ti-pencil" # themify icon pack: https://themify.me/themify-icons
+    content : "A digital agency isn't here to replace your internal team, we're here to partner"
+    
+  # service item loop
+  - title : "Practical Application"
     icon : "ti-desktop" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
     
   # service item loop
-  - title : "Interface Design"
-    icon : "ti-layers" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
   - title : "Business Consulting"
-    icon : "ti-bar-chart" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "Branding"
-    icon : "ti-vector" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "App development"
-    icon : "ti-android" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "Content creation"
-    icon : "ti-pencil-alt" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "Business Consulting"
-    icon : "ti-bar-chart" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "Branding"
-    icon : "ti-vector" # themify icon pack: https://themify.me/themify-icons
-    content : "A digital agency isn't here to replace your internal team, we're here to partner"
-    
-  # service item loop
-  - title : "App development"
-    icon : "ti-android" # themify icon pack: https://themify.me/themify-icons
+    icon : "ti-calendar" # themify icon pack: https://themify.me/themify-icons
     content : "A digital agency isn't here to replace your internal team, we're here to partner"
 
 
